--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2,7 +2,7 @@
   intro: Elizabeth Sall is outgoing Deputy Director for Technology Services for the San Francisco County Transportation Authority 
          and current free-thinker and do-er. She is excited to have the opportunity to share what she has learned from her combined 
          experiences in software development, urban data analysis, public-sector management, and policy development to a variety of 
-         clients and needss. 
+         clients and needs. 
   photo: img/team/elo.jpg
   linkedin: https://www.linkedin.com/profile/view?id=5649127
   service: Elizabeth compliments her professional life with a variety of efforts related to international and local conservation, 
