--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,11 +1,11 @@
 - name: Elizabeth
   intro: Elizabeth Sall is outgoing Deputy Director for Technology Services for the San Francisco County Transportation Authority 
          and current free-thinker and do-er. She is excited to have the opportunity to share what she has learned from her combined 
-         experiences in software development, urban data analysis, public-sector management, and policy development to a variety of 
+         experiences in software development, urban data analysis, public-sector management, and policy development with a variety of 
          clients and needs. 
   photo: img/team/elo.jpg
   linkedin: https://www.linkedin.com/profile/view?id=5649127
-  service: Elizabeth compliments her professional life with a variety of efforts related to international and local conservation, 
+  service: Elizabeth complements her professional life with a variety of efforts related to international and local conservation, 
            poverty alleviation, and global health (and particularly where these issues intersect) through vehicles such as impact 
            investing, social entrepreneurship, board service on several organizations and connecting some dots where they need connecting. 
            She has a particular passion for empowering local communities to affect (and hopefully control) their own destiny.
