--- a/_data/team.yml
+++ b/_data/team.yml
@@ -4,7 +4,7 @@
          experiences in software development, urban data analysis, public-sector management, and policy development with a variety of 
          clients and needs. 
   photo: img/team/elo.jpg
-  linkedin: https://www.linkedin.com/profile/view?id=5649127
+  linkedin: https://www.linkedin.com/in/elizabeth-sall-207a851
   service: Elizabeth complements her professional life with a variety of efforts related to international and local conservation, 
            poverty alleviation, and global health (and particularly where these issues intersect) through vehicles such as impact 
            investing, social entrepreneurship, board service on several organizations and connecting some dots where they need connecting. 
